# MyFinances

./: .gitignore  PYTHON_QUANT_ROADMAP.md  README.md  backtest.example.toml  config.py  demo.py  fix.py  main.py  package-lock.json  package.json  pyproject.toml  requirements.txt  symbols.csi300.csv  symbols.example.csv
.github/workflows/: ci.yml
backtest/: engine.py
data/: fetcher.py
examples/: custom_factor.py
factors/: __init__.py  calculator.py
myfinances_python_quant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
python_quant/: __init__.py  analysis.py  attribution_analysis.py  backtest.py  batch_analysis.py  broker_gateway.py  cache.py  cli_config.py  compute_backend.py  config.py  console_output.py  cost_analysis.py  data_loader.py  data_quality.py  data_store.py  enums.py  exceptions.py  execution_analysis.py  execution_model.py  exposure_analysis.py  factor_analysis.py  factor_registry.py  factors.py  health_analysis.py  ledger_analysis.py  main.py  market.py  models.py  pipeline.py  portfolio_optimizer.py  reporting.py  reporting_csv.py  reporting_html.py  reporting_json.py  reporting_labels.py  reporting_rank.py  reporting_svg.py  reporting_templates.py  risk_analysis.py  run_outputs.py  (+8 more)
report/: generator.py
scratch/: custom_test_factor.py  split_reporting.py
scripts/: app.py  dev_check.py
src/: config.ts  main.ts
src/backtest/: engine.ts
src/data/: fetcher.ts
src/factors/: calculator.ts
src/report/: generator.ts
tests/: conftest.py  test_analysis.py  test_backtest.py  test_config.py  test_custom_factor.py  test_custom_strategy.py  test_data_loader.py  test_data_quality.py  test_execution_model.py  test_main.py  test_pipeline.py  test_reporting.py  test_run_outputs.py  test_trading_rules.py  test_turnover_analysis.py
