[project]
name = "myfinances-python-quant"
version = "0.1.0"
description = "Practical local quant backtesting toolkit for MyFinances."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
myfinances-quant = "python_quant.main:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
