[project]
name = "myfinances-python-quant"
version = "0.1.0"
description = "Practical local quant backtesting toolkit for MyFinances."
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "ruff>=0.12",
]

[project.scripts]
myfinances-quant = "python_quant.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python_quant", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["python_quant"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
include = ["python_quant*"]
exclude = ["tests*", "output*"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
