[project]
name = "myfinances-python-quant"
version = "0.1.0"
description = "Practical local quant backtesting toolkit for MyFinances."
requires-python = ">=3.12"
dependencies = ["numpy>=1.24.0", "scipy>=1.10.0"]
readme = "README.md"
license = {text = "MIT"}
keywords = ["quant", "backtesting", "A-share", "factor"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.18",
    "ruff>=0.12",
]

[project.urls]
Repository = "https://github.com/Tshameless/MyFinances"

[project.scripts]
myfinances-quant = "python_quant.main:main"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python_quant", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
files = ["python_quant"]
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.setuptools.packages.find]
include = ["python_quant*"]
exclude = ["tests*", "output*"]

[tool.setuptools.package-data]
python_quant = ["py.typed"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
